examples/test/testpolicy2049.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2049
  namespace: namespace320
spec:
  podSelector:
    matchLabels:
      key34: value28
      key17: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value35
          key1: value45
      podSelector:
        matchLabels:
          key42: value38
